--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,6 @@
 platform = espressif32
 board = lolin_d32_pro
 framework = arduino
-upload_speed = 460800 
+upload_speed = 460800
 monitor_speed = 115200
+lib_deps = bblanchon/ArduinoJson@^6.20.1
